Update MainLayout and NavMenu to collapse the latter on click outside of it

--- a/WebSudoku/Layout/MainLayout.razor
+++ b/WebSudoku/Layout/MainLayout.razor
@@ -3,12 +3,16 @@
 
 <div class="page">
     <div class="sidebar hide-in-print">
-        <NavMenu />
+        <NavMenu @ref="navMenu" />
     </div>
 
     <main>
-        <article class="content px-4">
+        <article class="content px-4" @onclick="() => navMenu?.CollapseNavMenu()">
             @Body
         </article>
     </main>
 </div>
+
+@code {
+    private NavMenu? navMenu;
+}
