--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -40,4 +40,10 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+    public void CollapseNavMenu()
+    {
+        collapseNavMenu = true;
+        StateHasChanged();
+    }
 }
