Update Index.razor and clean up CSS for NavMenu

--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -17,7 +17,7 @@
 
 <ul>
     <li>
-        <strong class="text-decoration-underline">Saving and loading</strong>: Sudoku state can be saved and loaded.
+        <strong class="text-decoration-underline">Saving and loading</strong>: Sudoku state can be saved and loaded. Currently saves to and loads from browser's LocalStorage.
     </li>
     <li>
         <strong class="text-decoration-underline">Printing</strong>: You can print the sudoku board with ability to adjust the following options:
@@ -31,6 +31,8 @@
                 <b>Print highlighted errors</b> - if checked,
                 and given that there is active highlighting of conflicting cell values,
                 this option will include highlighting of errors in the printed version.
+                <br/>
+                <em>Please note that while preparing printed sudoku, You need to enable option: </em><b>Print backgrounds</b>.
             </li>
         </ul>
     </li>
