Extract PrintSettings.razor component from Sudoku.razor
Store settings inside of localStorage

Update Index page

--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -32,12 +32,12 @@
                 and given that there is active highlighting of conflicting cell values,
                 this option will include highlighting of errors in the printed version.
                 <br/>
-                <em>Please note that while preparing printed sudoku, You need to enable option: </em><b>Print backgrounds</b>.
+                <em>Please note that for this option to take effect, You need to enable option: </em><b>Print backgrounds</b><em> while preparing printed sudoku.</em>
             </li>
         </ul>
     </li>
     <li>
-        <strong class="text-decoration-underline">Validation</strong>: Any cell values conflicting with sudoku rules are highlighted automatically after changing cell's value.
+        <strong class="text-decoration-underline">Validation</strong>: Any editable cells' values conflicting with sudoku rules are highlighted automatically after changing cell's value.
     </li>
     <li>
         <strong class="text-decoration-underline">Navigation</strong>: You can navigate cells within the sudoku board using arrow keys.
