Add PrintMultiple page
Mention it on Index page and add link in NavMenu

--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 Sudoku
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="printMultiple">
+                Print Multiple
+            </NavLink>
+        </div>
 
         <div class="bottom-0 nav-item px-3 hide-in-print">
             <a class="text-decoration-underline nav-link" href="https://github.com/APB97/WebSudoku" target="_blank">Code</a>
