--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -11,11 +11,16 @@
 
 <p>To start playing use the navigation menu or press the button below.</p>
 
-<a class="btn btn-success" href="sudoku">Start playing</a>
+<a class="btn btn-success" href="sudoku">Start playing</a> or <a class="btn btn-secondary" href="printMultiple">Print multiple ones</a>
 
 <h3>Features</h3>
 
 <ul>
+    <li>
+        <strong class="text-decoration-underline">Print multiple</strong> <strong><span class="text-decoration-none text-uppercase text-primary">New</span></strong>:
+        Separate page which allows preparing sudokus for printing by adding 2, 4 or 8 additional boards at once.
+        Also includes <b>Clear all</b> button for starting from scratch by clearing all boards on the page.
+    </li>
     <li>
         <strong class="text-decoration-underline">Saving and loading</strong>: Sudoku state can be saved and loaded. Currently saves to and loads from browser's LocalStorage.
     </li>
