--- a/WebSudoku/Pages/PrintMultiple.razor
+++ b/WebSudoku/Pages/PrintMultiple.razor
@@ -1,6 +1,7 @@
 ﻿@page "/printMultiple"
 
 @using System.Globalization
+@using WebSudoku.Extensions
 @using WebSudoku.Shared
 @using WebSudoku.Shared.General
 @using WebSudoku.Shared.Sudoku
@@ -71,7 +72,7 @@
     protected override async Task OnInitializedAsync()
     {
         utilities = await JS.InvokeAsync<IJSObjectReference>("import", "./js/utilities.js");
-        var setting = await utilities.InvokeAsync<string>("getSetting", "printMultiple_boardWidthPercentage");
+        var setting = await utilities.GetSetting<string>("printMultiple_boardWidthPercentage");
         if (!float.TryParse(setting, out var result)) return;
         boardWidthPercentage = result;
     }
@@ -80,7 +81,7 @@
     {
         boardWidthPercentage = width;
         if (utilities is null) return;
-        await utilities.InvokeVoidAsync("setSetting", "printMultiple_boardWidthPercentage", width);
+        await utilities.SetSetting("printMultiple_boardWidthPercentage", width);
     }
 
     private async Task GenerateBoards(int amount)
@@ -100,7 +101,7 @@
             {
                 if (utilities is not null)
                 {
-                    await utilities.InvokeVoidAsync("alert", ex.Message);
+                    await utilities.Alert(ex.Message);
                 }
             }
             finally
