--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -61,10 +61,10 @@
         Each cell on the board should be filled with digits 1 through 9.
     </li>
     <li>
-        Inside of each 3x3 square, column and row, given digit can appear only once.
+        Inside of each 3x3 square, column and row, any given digit can appear only once.
     </li>
     <li>
-        You start a game with a board where some of the cells have been assigned a digit that cannot be changed. Your should fill the board according to the rules.
+        You start a game with a board where some of the cells have been assigned a digit that cannot be changed. You should fill the board according to the rules.
     </li>
 </ul>
 
