--- a/WebSudoku/Shared/Cell.razor
+++ b/WebSudoku/Shared/Cell.razor
@@ -44,6 +44,7 @@ else
     protected override void OnInitialized()
     {
         type = DefaultType;
+        StateHasChanged();
     }
 
     public void OnChange(string value)
