Start with input type 'number'

--- a/WebSudoku/Shared/Cell.razor
+++ b/WebSudoku/Shared/Cell.razor
@@ -27,7 +27,7 @@ else
     [Parameter]
     public string Value { get; set; } = string.Empty;
 
-    private string type = InputTypeText;
+    private string type = InputTypeNumber;
 
     [Parameter]
     public EventCallback<KeyboardEventArgs> OnKeyDown { get; set; }
